<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>bookmarksLocationsDialogForm</class>
 <widget class="QWidget" name="bookmarksLocationsDialogForm">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>680</width>
    <height>359</height>
   </rect>
  </property>
  <layout class="QGridLayout" name="gridLayout_2">
   <property name="leftMargin">
    <number>0</number>
   </property>
   <property name="topMargin">
    <number>0</number>
   </property>
   <property name="rightMargin">
    <number>0</number>
   </property>
   <property name="bottomMargin">
    <number>0</number>
   </property>
   <property name="spacing">
    <number>0</number>
   </property>
   <item row="0" column="0">
    <widget class="BarFrame" name="TitleBar">
     <property name="minimumSize">
      <size>
       <width>16</width>
       <height>25</height>
      </size>
     </property>
     <property name="maximumSize">
      <size>
       <width>16777215</width>
       <height>25</height>
      </size>
     </property>
     <property name="frameShape">
      <enum>QFrame::StyledPanel</enum>
     </property>
     <layout class="QHBoxLayout">
      <property name="leftMargin">
       <number>0</number>
      </property>
      <property name="topMargin">
       <number>0</number>
      </property>
      <property name="rightMargin">
       <number>4</number>
      </property>
      <property name="bottomMargin">
       <number>0</number>
      </property>
      <item>
       <spacer>
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
          <width>40</width>
          <height>20</height>
         </size>
        </property>
       </spacer>
      </item>
      <item>
       <widget class="QLabel" name="stelWindowTitle">
        <property name="palette">
         <palette>
          <active/>
          <inactive/>
          <disabled/>
         </palette>
        </property>
        <property name="font">
         <font/>
        </property>
        <property name="text">
         <string>Bookmarks Locations</string>
        </property>
       </widget>
      </item>
      <item>
       <spacer>
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
          <width>40</width>
          <height>20</height>
         </size>
        </property>
       </spacer>
      </item>
      <item>
       <widget class="QPushButton" name="closeStelWindow">
        <property name="minimumSize">
         <size>
          <width>16</width>
          <height>16</height>
         </size>
        </property>
        <property name="maximumSize">
         <size>
          <width>16</width>
          <height>16</height>
         </size>
        </property>
        <property name="focusPolicy">
         <enum>Qt::NoFocus</enum>
        </property>
        <property name="text">
         <string/>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
   <item row="1" column="0">
    <widget class="QWidget" name="widget" native="true">
     <layout class="QGridLayout" name="gridLayout">
      <item row="3" column="0">
       <widget class="QFrame" name="frame">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
        <property name="frameShape">
         <enum>QFrame::StyledPanel</enum>
        </property>
        <property name="frameShadow">
         <enum>QFrame::Raised</enum>
        </property>
        <layout class="QVBoxLayout" name="verticalLayout_4">
         <item>
          <layout class="QHBoxLayout" name="horizontalLayout_checkbox">
           <item>
            <widget class="QCheckBox" name="dateTimeCheckBox">
             <property name="text">
              <string>Add date and time</string>
             </property>
            </widget>
           </item>
          </layout>
         </item>
         <item>
          <layout class="QHBoxLayout" name="horizontalLayout_buttons_1">
           <item>
            <widget class="QPushButton" name="addBookmarkCurrentLocationButton">
             <property name="toolTip">
              <string>Add current location to bookmarks</string>
             </property>
             <property name="text">
              <string>&amp;Bookmark current location</string>
             </property>
            </widget>
           </item>
           <item>
            <widget class="QPushButton" name="addBookmarkLocationFromListButton">
             <property name="toolTip">
              <string>Add location from list to bookmarks</string>
             </property>
             <property name="text">
              <string>Bookmark location from list</string>
             </property>
            </widget>
           </item>
           <item>
            <widget class="QPushButton" name="addBookmarkLocationFromGpsCoordButton">
             <property name="toolTip">
              <string>Add location from GPS coordinates to bookmarks</string>
             </property>
             <property name="text">
              <string>Bookmarks location from GPS coordinates</string>
             </property>
            </widget>
           </item>
          </layout>
         </item>
         <item>
          <layout class="QHBoxLayout" name="horizontalLayout_buttons_2">
           <property name="topMargin">
            <number>0</number>
           </property>
           <item>
            <widget class="QPushButton" name="goToLocationButton">
             <property name="text">
              <string>&amp;Go to location...</string>
             </property>
            </widget>
           </item>
           <item>
            <widget class="QPushButton" name="importBookmarksLocationsButton">
             <property name="text">
              <string>Import bookmarks</string>
             </property>
            </widget>
           </item>
           <item>
            <widget class="QPushButton" name="exportBookmarksLocationsButton">
             <property name="text">
              <string>Export bookmarks</string>
             </property>
            </widget>
           </item>
           <item>
            <widget class="QPushButton" name="removeBookmarkLocationButton">
             <property name="text">
              <string>&amp;Remove bookmark</string>
             </property>
            </widget>
           </item>
           <item>
            <widget class="QPushButton" name="clearBookmarksLocationsButton">
             <property name="text">
              <string>Clear bookmarks</string>
             </property>
            </widget>
           </item>
          </layout>
         </item>
        </layout>
       </widget>
      </item>
      <item row="0" column="0">
       <widget class="QTreeView" name="bookmarksLocationsTreeView"/>
      </item>
     </layout>
    </widget>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>BarFrame</class>
   <extends>QFrame</extends>
   <header>Dialog.hpp</header>
   <container>1</container>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections/>
</ui>
